# font-maker

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  build.sh  build_wasm.sh  capitals_filtered.geojson  glyphs.proto  index.html  main.cpp  run.sh  sdfglyph.js  sdfglyph.wasm  worker.js
.github/: funding.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: actions.yml
app/: .editorconfig  .gitignore  create_sample_dataset.py  index.html  package-lock.json  package.json  vite.config.ts
app/public/: capitals.geojson  worker.js
app/src/: App.tsx  main.css  main.tsx  style.ts
app/src/components/App/: App.module.css  App.tsx  appReducer.ts  utilities.ts
app/src/components/ExamplesSection/: ExamplesSection.module.css  ExamplesSection.tsx
app/src/components/FileTreeItem/: FileTreeItem.module.css  FileTreeItem.tsx  Tooltip.css
app/src/components/FilesSection/: FilesSection.module.css  FilesSection.tsx  utilities.ts
app/src/components/Inputs/: Inputs.module.css  Inputs.tsx
app/src/components/MapPreview/: MapPreview.tsx  useMapLibreStyleSpec.ts
app/src/components/MapSettingsSection/: MapSettingsSection.module.css  MapSettingsSection.tsx
app/src/components/PermittedGitHubLogo/: PermittedGitHubLogo.tsx
app/src/data/: data.ts
app/src/types/: types.ts
assets/: index--fjHkITG.js  index-4c5e0750.css  index-BNEbKbmh.css  index-BzfegERy.js  index-CZNsyPWO.js  index-Dss-M0Jw.js  index-aff82323.js  index-fc2e9253.js
examples/: .gitignore  NotoSansBold.sh  NotoSansRegular.sh
js/: glyphs.js  sdfglyph.js  sdfglyph.wasm
